# pdxloc

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
requirements/: build.txt  format.txt  lint.txt  test.txt
samples/: read_modify_write.py  typical_loc_file.yml
src/pdxloc/: util.py
tests/: named_temporary_file.py  test_basics.py  test_empty_file.py  test_german.py
